--- a/QuanLyThuVien/QuanLyThuVien.csproj
+++ b/QuanLyThuVien/QuanLyThuVien.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accounts.cs" />
+    <Compile Include="BanDoc.cs" />
+    <Compile Include="Book.cs" />
+    <Compile Include="PhieuMuon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
